--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1696,5 +1696,5 @@
     <!-- switch settings -->
     <string name="switch_off">Off</string>
     <string name="switch_manual">Manual</string>
-    <string name="switch_auto">Auto</string>
+    <string name="switch_auto">Automatic</string>
 </resources>
