Make map line colors configurable

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -658,7 +658,11 @@
     <string name="init_dataDir_note">You may choose to store the additional data for geocaches (spoilers, log images, …) on your external storage (emulated or real external SD card depending on your device).</string>
     <string name="init_maptrail">Show Trail</string>
     <string name="init_summary_maptrail">Show trail on Map</string>
-    <string name="init_trailcolor">Trail color</string>
+    <string name="init_trailcolor">History trail line color</string>
+    <string name="init_directioncolor">Direction line color</string>
+    <string name="init_routecolor">Route line color</string>
+    <string name="init_circlecolor">Circle line color</string>
+    <string name="init_circlefillcolor">Circle fill color</string>
     <string name="init_share_after_export">Open share menu after GPX export</string>
     <string name="init_include_found_status">Include \"Found\" status</string>
     <string name="init_trackautovisit">Visit TBs</string>
@@ -733,6 +737,7 @@
     <string name="feature_search_finder">Search by finder</string>
     <string name="feature_favorite">Adding cache to favorites</string>
     <string name="feature_voting">Voting for caches</string>
+    <string name="init_maplines_title">Map lines customization</string>
     <string name="init_mapsforge_api_title">Mapsforge API</string>
     <string name="init_mfold_api">Old Mapsforge V3</string>
     <string name="init_mfold_api_description">We are using a new version of the Mapsforge map by default. If you miss some features or encounter issues you can go back to the old version here.</string>
