export trail history as GPX track (fix #8424)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1746,4 +1746,11 @@
     <!-- Download map preference -->
     <string name="downloadmap_title">Download basic offline maps</string>
     <string name="downloadmap_info">You will be redirected to a download site for basic offline maps (no themeing support).\n\nChose the .map file for your region and tap on it to download the file.\n\nWhen downloading has completed, tap on the downloaded file to set this map as current map for c:geo</string>
+
+    <!-- history trail export -->
+    <string name="trailhistory">Trail history</string>
+    <string name="export_trailhistory_title">Export trail history</string>
+    <string name="export_trailhistory_success">Exported trail history to \"%s\"</string>
+    <string name="export_trailhistory_clear_after_export">Clear trail history after export</string>
+
 </resources>
