More specific explanation of listdisplay
Now, that we have room for it.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -605,7 +605,7 @@
     <string name="init_choose_list">Ask for List</string>
     <string name="init_summary_choose_list">Ask which list to store caches in</string>
     <string name="init_listdisplay">Additional lists</string>
-    <string name="init_summary_listdisplay">Show additional lists in cache list</string>
+    <string name="init_summary_listdisplay">Show membership of caches to additional lists in a cache list</string>
     <string name="init_livelist">Show Direction</string>
     <string name="init_summary_livelist">Show direction of caches in the list</string>
 
