--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -665,15 +665,25 @@
     <string name="init_maptrail_length_summary">Set maximum length of history track (enforced on each startup of c:geo). Default value is 700 - adjust according to available memory.</string>
     <string name="init_summary_maptrail">When activated (and GPS is on) c:geo saves the history of your movements as a track and displays it on the map.</string>
     <string name="init_trailcolor">History track line color</string>
+    <string name="init_trailcolor_summary">Select color and opaqueness for history track line</string>
     <string name="init_trailwidth">History track line width</string>
+    <string name="init_trailwidth_summary">Select width for history track line</string>
     <string name="init_directioncolor">Direction line color</string>
+    <string name="init_directioncolor_summary">Select color and opaqueness for direction line. Direction line shows a straight line to your selected navigation target, or the specific routed navigation path, if routing is enabled by installing the BRouter app.</string>
     <string name="init_directionwidth">Direction line width</string>
+    <string name="init_directionwidth_summary">Select width for direction line</string>
     <string name="init_routecolor">Individual route line color</string>
+    <string name="init_routecolor_summary">Select color and opaqueness for individual route line. An individual route is a collection of waypoints and/or caches you selected by long-pressing on the waypoint/cache. (You need to enable the long press function first, see map settings.)</string>
     <string name="init_routewidth">Individual route line width</string>
+    <string name="init_routewidth_summary">Select width for individual route line.</string>
     <string name="init_trackcolor">Individual track line color</string>
+    <string name="init_trackcolor_summary">Select color and opaqueness for track line. A track consists of several waypoints and can be loaded via a track GPX file.</string>
     <string name="init_trackwidth">Individual track line width</string>
+    <string name="init_trackwidth_summary">Select width for individual track line.</string>
     <string name="init_circlecolor">Circle line color</string>
+    <string name="init_circlecolor_summary">Select color and opaqueness for circle line. Circles are used as a visual representation for the minimum radius around a cache or physical waypoint, wherein no other cache or physical waypoint is allowed. (Applies to geocaching.com)</string>
     <string name="init_circlefillcolor">Circle fill color</string>
+    <string name="init_circlefillcolor_summary">Select color and opaqueness for the circles to be filled with.</string>
     <string name="init_share_after_export">Open share menu after GPX export</string>
     <string name="init_include_found_status">Include \"Found\" status</string>
     <string name="init_trackautovisit">Visit TBs</string>
