--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -675,15 +675,15 @@
     <string name="init_routecolor">Individual route line color</string>
     <string name="init_routecolor_summary">Select color and opaqueness for individual route line. An individual route is a collection of waypoints and/or caches you selected by long-pressing on the waypoint/cache. (You need to enable the long press function first, see map settings.)</string>
     <string name="init_routewidth">Individual route line width</string>
-    <string name="init_routewidth_summary">Select width for individual route line.</string>
+    <string name="init_routewidth_summary">Select width for individual route line</string>
     <string name="init_trackcolor">Individual track line color</string>
     <string name="init_trackcolor_summary">Select color and opaqueness for track line. A track consists of several waypoints and can be loaded via a track GPX file.</string>
     <string name="init_trackwidth">Individual track line width</string>
-    <string name="init_trackwidth_summary">Select width for individual track line.</string>
+    <string name="init_trackwidth_summary">Select width for individual track line</string>
     <string name="init_circlecolor">Circle line color</string>
     <string name="init_circlecolor_summary">Select color and opaqueness for circle line. Circles are used as a visual representation for the minimum radius around a cache or physical waypoint, wherein no other cache or physical waypoint is allowed. (Applies to geocaching.com)</string>
     <string name="init_circlefillcolor">Circle fill color</string>
-    <string name="init_circlefillcolor_summary">Select color and opaqueness for the circles to be filled with.</string>
+    <string name="init_circlefillcolor_summary">Select color and opaqueness for the circles to be filled with</string>
     <string name="init_share_after_export">Open share menu after GPX export</string>
     <string name="init_include_found_status">Include \"Found\" status</string>
     <string name="init_trackautovisit">Visit TBs</string>
