--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1799,6 +1799,7 @@
     <string name="preference_colorpicker_select_color_scheme">Select color scheme</string>
     <string name="preference_colorpicker_select_color">Select color</string>
     <string name="preference_colorpicker_select_opaqueness">Select opaqueness</string>
+    <string name="reset_to_default">Default</string>
 
     <!-- number input -->
     <string name="number_input_title">Enter a value between %1$s and %2$s</string>
