--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1821,6 +1821,7 @@
     <string name="individual_route_error_toggling_waypoint">error toggling waypoint</string>
     <string name="individual_route_error_single_waypoint_mode">Not available in single waypoint mode</string>
     <string name="map_sort_individual_route">Sort individual route</string>
+    <string name="map_export_individual_route">Export individual route</string>
     <string name="map_clear_individual_route">Clear individual route</string>
     <string name="map_individual_route_cleared">Individual route cleared</string>
     <string name="save_sorted_route">Save</string>
@@ -1879,4 +1880,7 @@
     <string name="export_trailhistory_success">Exported history track to \"%s\"</string>
     <string name="export_trailhistory_clear_after_export">Clear history track after export</string>
 
+    <!-- individual route export -->
+    <string name="export_individualroute_title">Export individual route</string>
+    <string name="export_individualroute_success">Exported individual route to \"%s\"</string>
 </resources>
