--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -152,13 +152,8 @@
     <string name="log_problem_archive_label">Cache should be archived</string>
     <string name="log_problem_archive_text">This geocacher reported that this geocache should be archived. A community volunteer reviewer has been notified.</string>
 
-    <string-array name="log_image_scales">
-        <item>No scaling</item>
-        <item>512 px</item>
-        <item>640 px</item>
-        <item>800 px</item>
-        <item>1024 px</item>
-    </string-array>
+    <string name="log_image_scale_option_noscaling">No scaling</string>
+    <string name="log_image_scale_option_entry">%1$d px</string>
 
     <!-- translation -->
     <string name="translate_to_sys_lang">Translate to %s</string>
