--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1823,6 +1823,7 @@
     <string name="map_sort_individual_route">Sort individual route</string>
     <string name="map_export_individual_route">Export individual route</string>
     <string name="map_clear_individual_route">Clear individual route</string>
+    <string name="map_clear_individual_route_confirm">Do you want to remove all caches/waypoints from your individual route?</string>>
     <string name="map_individual_route_cleared">Individual route cleared</string>
     <string name="save_sorted_route">Save</string>
     <string name="sorted_route_saved">Individual route saved</string>
