--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -565,6 +565,7 @@
     <string name="init_signature_template_datetime">Date &amp; Time</string>
     <string name="init_signature_template_user">User</string>
     <string name="init_signature_template_number">Number</string>
+    <string name="init_signature_template_offlinenum">Number (offline support)</string>
     <string name="init_signature_template_owner">Owner</string>
     <string name="init_signature_template_name">Name</string>
     <string name="init_signature_template_difficulty">Difficulty</string>
