--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -601,7 +601,7 @@
     <string name="init_archived">Exclude Archived</string>
     <string name="init_summary_archived">Exclude archived caches</string>
     <string name="init_global_wp_extraction_disable">Waypoint Extraction</string>
-    <string name="init_summary_global_wp_extraction_disable">Disable waypoint extraction from personal cache notes</string>
+    <string name="init_summary_global_wp_extraction_disable">Globally disable waypoint extraction from personal cache notes. It can still be enabled for individual caches by deactivating the checkbox below the personal cache note</string>
     <string name="init_save_log_img">Save Images</string>
     <string name="init_summary_save_log_img">Save Images from Logs</string>
     <string name="init_units">Use Imperial Units</string>
